--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
 	},
 	"displayName": "FS AI Tools",
 	"description": "A bag of tools for AI flightplans and .cfg files",
-	"version": "1.7.6",
+	"version": "1.7.7",
 	"icon": "icon.png",
 	"license": "",
 	"engines": {
-		"vscode": "^1.74.0"
+		"vscode": "^1.84.1"
 	},
 	"categories": [
 		"Other"
@@ -1067,26 +1067,27 @@
 		"test": "eslint src --ext ts && tsc --noEmit"
 	},
 	"devDependencies": {
-		"@types/lodash": "^4.14.191",
-		"@types/mocha": "^10.0.1",
-		"@types/node": "^18.11.17",
-		"@types/vscode": "^1.73.1",
-		"@typescript-eslint/eslint-plugin": "^5.46.1",
-		"@vscode/test-electron": "^2.2.1",
-		"esbuild": "^0.16.9",
-		"eslint": "^8.30.0",
+		"@types/lodash": "^4.14.201",
+		"@types/mocha": "^10.0.4",
+		"@types/node": "^20.9.0",
+		"@types/vscode": "^1.84.1",
+		"@typescript-eslint/eslint-plugin": "^6.10.0",
+		"@vscode/test-electron": "^2.3.6",
+		"esbuild": "^0.19.5",
+		"eslint": "^8.53.0",
 		"eslint-plugin-header": "^3.1.1",
 		"mocha": "^10.2.0",
-		"rimraf": "^3.0.2",
-		"typescript": "^4.9.3",
+		"rimraf": "^5.0.5",
+		"typescript": "^5.2.2",
 		"vsce": "^2.15.0"
 	},
 	"dependencies": {
-		"axios": "^1.1.3",
+		"axios": "^1.6.1",
 		"fs": "~0.0.1-security",
 		"lodash": "^4.17.21",
+		"npm-check-updates": "^16.14.6",
 		"path": "~0.12.7",
 		"tiny-glob": "^0.2.9",
-		"trash": "^8.1.0"
+		"trash": "^8.1.1"
 	}
 }
