--- a/package.json
+++ b/package.json
@@ -1079,27 +1079,27 @@
 		"test": "eslint src --ext ts && tsc --noEmit"
 	},
 	"devDependencies": {
-		"@types/lodash": "^4.14.201",
-		"@types/mocha": "^10.0.4",
-		"@types/node": "^20.9.0",
-		"@types/vscode": "^1.84.1",
-		"@typescript-eslint/eslint-plugin": "^6.10.0",
-		"@vscode/test-electron": "^2.3.6",
-		"esbuild": "^0.19.5",
-		"eslint": "^8.53.0",
+		"@types/lodash": "^4.17.16",
+		"@types/mocha": "^10.0.10",
+		"@types/node": "^22.13.10",
+		"@types/vscode": "^1.98.0",
+		"@typescript-eslint/eslint-plugin": "^8.26.1",
+		"@vscode/test-electron": "^2.4.1",
+		"esbuild": "^0.25.1",
+		"eslint": "^9.22.0",
 		"eslint-plugin-header": "^3.1.1",
-		"mocha": "^10.2.0",
-		"rimraf": "^5.0.5",
-		"typescript": "^5.2.2",
-		"vsce": "^2.15.0"
+		"mocha": "^11.1.0",
+		"rimraf": "^6.0.1",
+		"typescript": "^5.8.2"
 	},
 	"dependencies": {
-		"axios": "^1.7.4",
+		"@vscode/vsce": "^3.2.2",
+		"axios": "^1.8.3",
 		"fs": "~0.0.1-security",
 		"lodash": "^4.17.21",
-		"npm-check-updates": "^16.14.6",
+		"npm-check-updates": "^17.1.15",
 		"path": "~0.12.7",
 		"tiny-glob": "^0.2.9",
-		"trash": "^8.1.1"
+		"trash": "^9.0.0"
 	}
 }
